# LinkedListLib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  readme.md  run.sh
doc/: CMakeLists.txt  mainpage.dox
include/: LinkedList.h
scripts/: build.py  docs.py  install.py  test.py
src/: LinkedList.c
test/: CMakeLists.txt  LinkedListTests.c
